  [ichim-david]
- Feature: Log response from the jabber server when trying to bind client and 
  it fails
  [ichim-david]
- Bugfix: Could not get portrait data for users with custom profile pictures.
  [jcbrand]
- Feature: Add a new controlpanel option to update all user's vCards.
  [jcbrand]
- Bugfix: When pre-binding, fetch admin user's password from IXMPPSettings. 
  [jcbrand]


0.2 (2013-03-20)
----------------

- Feature: Include the user's portrait in their vCard.
  [jcbrand]
- Feature: Update the user's vCard when they change their personal preferences.
  [jcbrand]
- Bugfix: Last user's roster suggestions ignored by XMPP server.
  [jcbrand]


0.1 (2013-03-15)
----------------

- Released. [jcbrand] 


0.1b8 (2013-03-09)
------------------

- Bugfix. All xmpp passwords were cleared when deregistering a subset of users.
  [jcbrand]


0.1b7 (2013-03-05)
------------------

- Previous release was broken. Didn't include ZCML files.
  [jcbrand]


0.1b6 (2013-03-04)
------------------

- Fixed rst issues when read by pypi which combines readme.rst and history.txt
  [ichim-david]

0.1b5 (2013-03-04)
------------------

- Feature: "Completely wipe password storage" action is now traced under zope log.
  [alecghica]
- Bugfix: 'ComponentLookupError' error when adding a local user.
  [alecghica]
- Feature: added error image and 'Unable to communicate with chat server' message
  when unable to bind the user to jabber server
  [alecghica]
- Feature: Add a VCard when registering a user on the XMPP server.
  [jcbrand]
- Feature: Make manual user registration idempotent (ignore already registered
  users).
  [jcbrand]
- Users are no longer registered upon creation. They must either be registered
  manually, or upon next logged in visit.
  [jcbrand]


0.1b4 (2013-02-02)
------------------

- Bugfix for "Deregister All" in @@xmpp-user-setup page. Site root was not set
  in callback method.
  [jcbrand]


0.1b3 (2013-01-17)
------------------
