@@ -5,6 +5,5 @@
     <dependency>profile-plone.app.registry:default</dependency>
     <dependency>profile-plone.app.z3cform:default</dependency>
     <dependency>profile-Products.UserAndGroupSelectionWidget:default</dependency>
-    <dependency>profile-jarn.jsi18n:default</dependency>
   </dependencies>
 </metadata>
